cadastro de usuários

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_BACKEND_URL = "http://10.0.0.102:3001"
 
 VITE_ERROR_UNKNOWN = "Erro desconhecido. Tente novamente mais tarde ou entre em contato com o nosso suporte!"
 VITE_ERROR_LOGIN_REQUIRED = "Nickname e Senha são necessários!"
+VITE_ERROR_REGISTER_REQUIRED = "Email, Nickname e Senha são necessários!"
+VITE_ERROR_PASSWORD_EQUAL = "Os campos de senha precisam ser iguais!"
